--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -82,7 +82,7 @@
                 layer.closeAll();
                 if(data.code == 0){
                     layer.msg("成功");
-                    window.location.href="/pixiv/getCrawlerPage";
+                    window.location.href="/goods/to_list";//pixiv/getCrawlerPage
                 }else{
                     layer.msg(data.msg);
                 }
