--- a/src/main/resources/templates/successResults.html
+++ b/src/main/resources/templates/successResults.html
@@ -1,10 +1,50 @@
 <!DOCTYPE html>
-<html lang="zh" xmlns:th="http://www.thymeleaf.org">
+<html lang="zh" xmlns:th="http://www.thymeleaf.org" xmlns:s="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8"/>
     <title>查询成功</title>
+
 </head>
 <body>
-<span th:text="${json}"> </span>
+<!--<span th:text="${json}"> </span>-->
+<!--<th:forEach items="${images}" var="u">
+    <s:output th:value="u"/>
+</th:forEach>-->
+
+<table>
+    <thead>
+    <tr>
+        <th>图片url</th>
+    </tr>
+    <tr th:each="image:${images}">
+        <td th:text="${image}"></td>
+    </tr>
+    </thead>
+</table>
 </body>
+<script>
+
+    /*window.onload(function requestData(){
+        $.ajax({
+            url: "/",
+            type: "post",
+            dataType: "json",
+            success: function(data){
+                /!*这个方法里是ajax发送请求成功之后执行的代码*!/
+                showData(data);//我们仅做数据展示
+            },
+            error: function(msg){
+                alert("ajax连接异常："+msg);
+            }
+        });
+    });
+    function showData(data) {
+        var str = "";//定义用于拼接的字符串
+        for (var i = 0; i < data.length; i++) {
+            //拼接表格的行和列
+            str = "<tr><td>" + data[i].name + "</td><td>" + data[i].password + "</td></tr>";
+            //追加到table中
+            $("#tab").append(str);         }
+    }*/
+</script>
 </html>
