--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,32 +9,32 @@
 		<meta name="keyword" content=" template, html5, css3, bootstrap4">
 		<meta name="description" content="HTML5 and CSS3 Template Based on Bootstrap 4">
 		<title>Shiki's Blog</title>
-		<link rel="stylesheet" href="ionicons/css/ionicons.min.css">
-		<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-		<link rel="stylesheet" href="sweetalert/dist/sweetalert.css">
-		<link rel="stylesheet" href="css/stisla.css">
+		<link rel="stylesheet" href="../static/ionicons/css/ionicons.min.css">
+		<link rel="stylesheet" href="../static/bootstrap/css/bootstrap.min.css">
+		<link rel="stylesheet" href="../static/sweetalert/dist/sweetalert.css">
+		<link rel="stylesheet" href="../static/css/stisla.css">
 
 		<!-- jquery -->
-		<script type="text/javascript" th:src="@{/js/jquery.min.js}"></script>
+		<script type="text/javascript" th:src="@{/static/js/jquery.min.js}"></script>
 		<!-- bootstrap -->
-		<link rel="stylesheet" type="text/css"  th:href="@{/bootstrap/css/bootstrap.min.css}" />
-		<script type="text/javascript" th:src="@{/bootstrap/js/bootstrap.min.js}"></script>
+		<link rel="stylesheet" type="text/css"  th:href="@{/static/bootstrap/css/bootstrap.min.css}" />
+		<script type="text/javascript" th:src="@{/static/bootstrap/js/bootstrap.min.js}"></script>
 		<!-- jquery-validator -->
-		<script type="text/javascript" th:src="@{/jquery-validation/jquery.validate.min.js}"></script>
-		<script type="text/javascript" th:src="@{/jquery-validation/localization/messages_zh.min.js}"></script>
+		<script type="text/javascript" th:src="@{/static/jquery-validation/jquery.validate.min.js}"></script>
+		<script type="text/javascript" th:src="@{/static/jquery-validation/localization/messages_zh.min.js}"></script>
 		<!-- layer -->
-		<script type="text/javascript" th:src="@{/layer/layer.js}"></script>
+		<script type="text/javascript" th:src="@{/static/layer/layer.js}"></script>
 		<!-- md5.js -->
-		<script type="text/javascript" th:src="@{/js/md5.min.js}"></script>
+		<script type="text/javascript" th:src="@{/static/js/md5.min.js}"></script>
 		<!-- common.js -->
-		<script type="text/javascript" th:src="@{/js/common.js}"></script>
+		<script type="text/javascript" th:src="@{/static/js/common.js}"></script>
 	</head>
 
 	<body>
 		<nav class="navbar navbar-expand-lg main-navbar">
 			<div class="container-fluid">			
 			  <a class="navbar-brand" href="#">
-			  	<img src="img/logo-light.png" alt="Logo">
+			  	<img src="../static/img/logo-light.png" alt="Logo">
 			  </a>
 			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			    <span class="navbar-toggler-icon">
@@ -133,7 +133,7 @@
 					<div class="row col-spacing">
 						<div class="col-12 col-md-6 col-lg-4">
 							<article class="card">
-							  <img class="card-img-top" src="img/news/img01.jpg" height="480" width="671" alt="Article Image">
+							  <img class="card-img-top" src="../static/img/news/img01.jpg" height="480" width="671" alt="Article Image">
 							  <div class="card-body">
 								  <div class="card-subtitle mb-2 text-muted">by <a href="#">Ryougi Shiki</a> on August 10, 2019</div>
 							    <h4 class="card-title"><a href="#" data-toggle="read" data-id="1">Notes of DataStructure </a></h4>
@@ -146,7 +146,7 @@
 					  </div>
 					  <div class="col-12 col-md-6 col-lg-4">
 							<article class="card">
-							  <img class="card-img-top" src="img/news/img04.jpg" height="480" width="671" alt="Article Image">
+							  <img class="card-img-top" src="../static/img/news/img04.jpg" height="480" width="671" alt="Article Image">
 							  <div class="card-body">
 								  <div class="card-subtitle mb-2 text-muted">by <a href="#">John Doe</a> on August 10, 2017</div>
 							    <h4 class="card-title"><a href="#" data-toggle="read" data-id="1">Velit esse cillum dolore eu blos siur dropsida wedor</a></h4>
@@ -159,7 +159,7 @@
 						</div>
 						<div class="col-12 col-md-6 col-lg-4">
 							<article class="card">
-							  <img class="card-img-top" src="img/news/img02.jpg" height="480" width="671" alt="Article Image">
+							  <img class="card-img-top" src="../static/img/news/img02.jpg" height="480" width="671" alt="Article Image">
 							  <div class="card-body">
 								  <div class="card-subtitle mb-2 text-muted">by <a href="#">John Doe</a> on August 10, 2017</div>
 							    <h4 class="card-title"><a href="#" data-toggle="read" data-id="1">Excepteur sint as occaecat dros cupidatat non proident los</a></h4>
@@ -172,7 +172,7 @@
 					  </div>
 					  <div class="col-12 col-md-6 col-lg-4">
 							<article class="card">
-							  <img class="card-img-top" src="img/news/img05.jpg" height="480" width="671" alt="Article Image">
+							  <img class="card-img-top" src="../static/img/news/img05.jpg" height="480" width="671" alt="Article Image">
 							  <div class="card-body">
 								  <div class="card-subtitle mb-2 text-muted">by <a href="#">John Doe</a> on August 10, 2017</div>
 							    <h4 class="card-title"><a href="#" data-toggle="read" data-id="1">Sunt in ado culpa qui officia deserunt mollit anim id</a></h4>
@@ -185,7 +185,7 @@
 						</div>
 						<div class="col-12 col-md-6 col-lg-4">
 							<article class="card">
-							  <img class="card-img-top" src="img/news/img03.jpg" height="480" width="671" alt="Article Image">
+							  <img class="card-img-top" src="../static/img/news/img03.jpg" height="480" width="671" alt="Article Image">
 							  <div class="card-body">
 								  <div class="card-subtitle mb-2 text-muted">by <a href="#">John Doe</a> on August 10, 2017</div>
 							    <h4 class="card-title"><a href="#" data-toggle="read" data-id="1">Incididunt ut labore et labore dolore magna aliqua lorem</a></h4>
@@ -198,7 +198,7 @@
 					  </div>
 					  <div class="col-12 col-md-6 col-lg-4">
 							<article class="card">
-							  <img class="card-img-top" src="img/news/img06.jpg" alt="Article Image">
+							  <img class="card-img-top" src="../static/img/news/img06.jpg" alt="Article Image">
 							  <div class="card-body">
 								  <div class="card-subtitle mb-2 text-muted">by <a href="#">John Doe</a> on August 10, 2017</div>
 							    <h4 class="card-title"><a href="#" data-toggle="read" data-id="1">Ut enim ad minim veniam quis nostrud enim ad kruv</a></h4>
@@ -233,7 +233,7 @@
 				<div class="row align-items-center">
 					<div class="col-12 col-md-6">
 						<figure class="projects-picture">
-							<img src="img/youzhang.png" alt="Youzhang">
+							<img src="../static/img/youzhang.png" alt="Youzhang">
 						</figure>
 					</div>
 					<div class="col-12 col-md-6">
@@ -321,7 +321,7 @@
 		<footer>
 			<div class="container">
 				<figure>
-					<img src="img/logo-light.png" alt="Logo">
+					<img src="../static/img/logo-light.png" alt="Logo">
 				</figure>
 				<p>
 					Copyright &copy; 2020
@@ -332,11 +332,11 @@
 			</div>
 		</footer>
 
-		<script src="js/jquery.min.js"></script>
-		<script src="bootstrap/js/bootstrap.min.js"></script>
-		<script src="js/jquery.easeScroll.js"></script>
-		<script src="sweetalert/dist/sweetalert.min.js"></script>
-		<script src="js/stisla.js"></script>
+		<script src="../static/js/jquery.min.js"></script>
+		<script src="../static/bootstrap/js/bootstrap.min.js"></script>
+		<script src="../static/js/jquery.easeScroll.js"></script>
+		<script src="../static/sweetalert/dist/sweetalert.min.js"></script>
+		<script src="../static/js/stisla.js"></script>
 	</body>
 	<script>
 		function login(){
